# ollama2jinja

./: CMakeLists.txt  README.md  main.cpp  meson.build
.github/workflows/: ci.yml
scripts/: build_and_test.sh
test/data/: basic-loop.jinja.tmpl  basic-loop.ollama.tmpl  comments.ollama.tmpl  conditional-statements.jinja.tmpl  custom-functions.jinja.tmpl  custom-functions.ollama.tmpl  default-values.jinja.tmpl  default-values.ollama.tmpl  escaping-characters.jinja.tmpl  escaping-characters.ollama.tmpl  function-calls.jinja.tmpl  function-calls.ollama.tmpl  including-partial-templates.jinja.tmpl  including-partial-templates.ollama.tmpl  iterating-with-index.jinja.tmpl  iterating-with-index.ollama.tmpl  json-encoding.jinja.tmpl  json-encoding.ollama.tmpl  length-of-a-list.jinja.tmpl  length-of-a-list.ollama.tmpl  nested-loop-with-condition.jinja.tmpl  nested-loop-with-condition.ollama.tmpl  setting-variables.jinja.tmpl  setting-variables.ollama.tmpl  whitespace-control.jinja.tmpl  whitespace-control.ollama.tmpl
